# kaggle-ai-core

./: .gitignore  README.md  pyproject.toml
kaggle_ai_core/: checkpoint.py  config.py  dataset_analyzer.py  dataset_selector.py  github_logger.py  kaggle_client.py  nemotron_client.py  profile_formatting.py
kaggle_ai_core/utils/: file_utils.py  helpers.py  retry.py
